[package]
name = "fingerprint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
json = "0.12.4"
sha2 = "0.9.8"
hex-literal = "0.3.4"
hex = "0.4.3"
md5 = "0.7.0"
simhash = "0.2.0"
